# biblioassistant

./: .gitignore  2026-01-29-004443.md  BIBLIO_ANNOUNCEMENT.md  GEMINI.md  NEWS_POST.md  PLAN.md  README.md  RELEVANCE_CONTEXT.md  add_dois_batch.py  backfill.py  check_journals.py  check_ollama.py  debug_script.py  delme.sh  main.py  manual_process.py  pyproject.toml  recover_pdfs.py  reprocess_batch_2.py  resolve_promoted.py  run_daily.sh
data/: cron.log~  news.json
scripts/: add_authors_by_doi.py  anacron_wrapper.sh  fix_bibtex.py  migrate_authors.py  migrate_journals.py  migrate_journals_canonical.py  update_journal_urls.py
src/: config.py  db.py  discovery.py  extractor.py  fetcher.py  filter.py  generator.py  logger.py  main.py  models.py  synthesizer.py  utils.py
templates/: about.html  archive.html  author.html  authors.html  base.html  filter.html  index.html  journal.html  journals.html  month.html  news.html  paper.html  stats.html
